# bleakai

./: .gitignore  Dockerfile  Makefile  STREAM_PROCESSING_REFACTOR_PLAN.md  dockerignore  langgraph.json  main.py  notes.md  notes.txt  pyproject.toml
.claude/commands/ui/: component-new.md
backend/: .gitignore  langgraph.json  main.py  migratesteps.txt  pyproject.toml  testbasic.py
backend/src/: basic_graph.py  graph.py  main.py  prompts.py  state.py  test_supervisor.py  utils.py
backend/src/graphs/: __init__.py  basic_graph.py  clarify_graph.py  prompt_graph.py
backend/src/routers/: __init__.py  chat_router.py  clarify_router.py  prompt_router.py
backend/src/shared/: __init__.py  state.py  streaming.py  utils.py
bleakai/: .gitignore  package-lock.json  package.json  tsconfig.json
bleakai/src/: index.ts
frontend/: index.html  nixpacks.toml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BasicChat.tsx  BetaBlockerModal.tsx  Chat.tsx  ClarifyChat.tsx  CustomChat.tsx  CustomChat2.tsx  CustomChat3.tsx  Header.tsx  InterruptUI.tsx  Questions.tsx  QuestionsOutput.tsx
frontend/src/config/: assistants.ts
frontend/src/contexts/: ThreadContext.tsx
frontend/src/custom2/: api2.ts
frontend/src/services/: StreamProcessingService.ts  ThreadService.ts  ToolRegistryService.ts
frontend/src/utils/: api.ts  chatApi.ts  (+1 more)
hono-langgraph-server/: package-lock.json  package.json  tsconfig.json
hono-langgraph-server/src/: graph.ts  index.ts
src/: graph.py  graph2.py  test_graph.py  utils.py
(+24 files in other folders)
